# popcore

./: .gitignore  README.md  doc.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
examples/axelrod/: main.py
examples/cleanrl/: environment.yml  hooks.py  ppo_with_population.py
examples/dna/: README.md  fixtures.py  population_dna.py
src/popcore/: README.md  __init__.py  _core.py  core.py  errors.py  evo.py  hooks.py  iter.py  iterators.py  phylogenetic.py  population.py  population_with_sparsity.py  storage.py  utils.py
src/popcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/popcore/storage/: binary.py  core.py  keyvalue.py  repo.py
test/: fixtures.py  test_axelrod.py  test_core.py  test_interaction.py  test_iterators.py  test_phylogenetic.py  test_phylogenetic_PP0.py  test_player.py  test_population.py  test_population_PP0.py  test_population_ppo.py  test_repository.py
test/PPO_logs/CartPole-v1/: PPO_CartPole-v1_log_0.csv  PPO_CartPole-v1_log_1.csv  PPO_CartPole-v1_log_11.csv  PPO_CartPole-v1_log_12.csv  PPO_CartPole-v1_log_13.csv  PPO_CartPole-v1_log_14.csv  PPO_CartPole-v1_log_15.csv  PPO_CartPole-v1_log_17.csv  PPO_CartPole-v1_log_19.csv  PPO_CartPole-v1_log_2.csv  PPO_CartPole-v1_log_20.csv  PPO_CartPole-v1_log_28.csv  PPO_CartPole-v1_log_32.csv  PPO_CartPole-v1_log_34.csv  PPO_CartPole-v1_log_35.csv  PPO_CartPole-v1_log_36.csv  (+30 more)
test/unit_tests/: test_branch.py  test_checkout.py  test_commit.py  test_init.py
test/usability/: test_population.py  test_population_usability.py
(+1 files in other folders)
