[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "popcore"
version = "1.0.0"
authors = [
    {name = "Aurélien Bück-Kaeffer", email = "aurelien.buck.kaeffer@gmail.com"},
    {name = "Manfred Diaz"}
]
description = "Core"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["RL", "poprl", "population"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "networkx",
    "matplotlib",
    "pydot",
    "torch>=2.0.1",
    "numpy>=1.25.0",
    "gym>=0.26.2",
    "axelrod",
    "pytest",
]

[project.urls]
url = 'https://www.python.org/sigs/distutils-sig/'
Repository = 'https://github.com/poprl/popcore'

[tool.setuptools.packages.find]
where = ["src"]

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/